<resources>
    <string name="app_name">ShareQuick</string>
    <string name="post_image_description">The picture of this post</string>
    <string name="text_edit_post">Edit Post</string>
    <string name="text_new_post">New Post</string>
    <string name="text_saved_posts">Saved Posts</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="post">Post</string>
    <string name="edit">Edit</string>
    <string name="edit_last_post">Edit Last Post</string>
    <string name="view_last_post">View Last Post</string>
    <string name="view_saved_posts">View Saved Posts</string>
    <string name="title">Title of post</string>
    <string name="body">Body of post</string>
    <string name="add_image">Add Image</string>
    <string name="change_image">Change Image</string>
    <string name="blank_field_toast">Please fill out the fields before saving</string>
    <string name="delete_check">Are you sure you want to delete this?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="item_deleted">Item Deleted</string>
    <string name="start_new_post_text">Start a new Post</string>
    <string name="new_post">New Post</string>

    <string name="what_to_do">What would you like to do?</string>
    <string name="new_post_header">Create a New Post</string>
    <string name="edit_new_post_header">Design a new Post</string>
    <string name="edit_post_header">Change a post</string>
    <string name="view_or_post_a_post">View or Submit a post</string>
    <string name="view_saved_post_list">Saved Posts</string>

    <string name="need_picture_to_share">Please select a post that has an image to share to Instagram</string>
    <string name="share_picture">Share Picture</string>
    <string name="share_post">Share Post</string>

</resources>
