<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/edit_post_layout"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/edit_post_save_button"
            style="@style/EditPostButtonStyle"
            android:text="@string/save"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/light_green"
            />
        <Button
            android:id="@+id/edit_post_delete_button"
            style="@style/EditPostButtonStyle"
            android:text="@string/delete"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/red_rust"
            />


    </RelativeLayout>

    <EditText
        android:id="@+id/edit_post_title"
        style="@style/PostsText"
        android:textSize="14sp"
        android:hint="@string/title"
        android:autofillHints="@string/title"
        />
    <EditText
        android:id="@+id/edit_post_body"
        style="@style/PostsText"
        android:textSize="12sp"
        android:hint="@string/body"
        android:autofillHints="@string/body"
        />

    <Button
        android:id="@+id/edit_post_add_image_button"
       style="@style/EditPostButtonStyle"
        android:text="@string/add_image"
        android:backgroundTint="@color/baby_blue"
        />

    <ImageView
        android:id="@+id/edit_post_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/post_image_description"/>



</LinearLayout>