<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/view_post_layout"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/view_post_edit_button"
            style="@style/EditPostButtonStyle"
            android:text="@string/text_edit_post"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/light_green"
            />
        <Button
            android:id="@+id/view_post_delete_button"
            style="@style/EditPostButtonStyle"
            android:text="@string/delete"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/red_rust"
            />


    </RelativeLayout>

    <TextView
        android:id="@+id/view_post_title"
        style="@style/PostsText"
        android:textSize="14sp"
        android:text="Title of the post will go here"
        />
    <TextView
        android:id="@+id/view_post_body"
        style="@style/PostsText"
        android:textSize="12sp"
        android:text="Body of the Post will go here. Lets see what it looks like if it's on the longer side."
        />

    <ImageView
        android:id="@+id/view_post_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:contentDescription="@string/post_image_description"/>



</LinearLayout>